# builds-viewer

./: .gitignore  Cargo.toml  README.md  config.toml.sample
migrations/: 20260125234949_initial.sql
src/: main.rs
templates/: builds.html
