[package]
name = "builds-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15", features = ["serde_json"] }
axum = { version = "0.8", features = ["http1", "http2", "macros", "query", "tokio"] }
chrono = "0.4"
glc = { path = "../V4/api/game-library/game-library-common" }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "set-header", "timeout", "trace"] }
tracing = "0.1"
